infra/k8s/posts-nodeport-service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  posts-nodeport
spec:
  selector:
    app: posts
  type:  NodePort
  ports:
  - name:  posts-nodeport
    port:  4000
    targetPort:  4000
