infra/k8s/query-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  query-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - image:  calebflores/query
          name: query
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
    type: ClusterIP
    selector:
      app: query
    ports:
        - name: query
          protocol: TCP
          port: 4003
          targetPort: 4003
